--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,14 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
-    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.0" 
+            integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" 
+            crossorigin="anonymous">
+    </script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"
+            integrity="sha384-+Uth1QzYJsTjnS5SXVN3fFO4I32Y571xIuv53WJ2SA7y5/36tKU1VCutONAmg5eH" 
+            crossorigin="anonymous">
+    </script>
     <script>
         document.addEventListener('htmx:sendError', function(event) {
             alert('Unexpected error, please try again.');
@@ -46,6 +53,7 @@
     {{template "styles" .}}
   </head>
   <body>
+      </button>
     {{template "content" .}}
   </body>
 </html>
