--- a/templates/login-page.html
+++ b/templates/login-page.html
@@ -28,6 +28,12 @@
       width: 100%;
       color: #949292;
     }
+    
+    .text-fields {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
     .divider-text {
       flex: 1;
