--- a/templates/exercise-page.html
+++ b/templates/exercise-page.html
@@ -166,6 +166,36 @@
             <option>3:48</option>
             <option>2:39</option>
             <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>3:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
+            <option>2:47</option>
         </select>
         <div class="button-spacer"></div>
         {{template "button-content" .Hot }}
