--- a/templates/exercise-page.html
+++ b/templates/exercise-page.html
@@ -29,7 +29,6 @@
     }
 
     .exercise-measurement-text {
-      color: white;
       background-color: #0a2938;
       font-size: 1.5rem;
       width: 3rem;
@@ -147,6 +146,43 @@
 		left: 0.875rem;
 		color: #42ff00;
 	}
+
+	.gg-redo {
+		box-sizing: border-box;
+		position: relative;
+		display: block;
+		transform: scale(var(--ggs, 1));
+		width: 1.75rem;
+		height: 1.75rem;
+		border: 0.25rem solid;
+		border-right-color: transparent;
+		border-radius: 100%;
+		color: #EDFF00;
+	}
+
+	.gg-redo::before {
+		content: "";
+		display: block;
+		box-sizing: border-box;
+		position: absolute;
+		width: 0.75rem;
+		height: 0.75rem;
+		border-top: 0.25rem solid;
+		border-right: 0.25rem solid;
+		top: -0.375rem;
+		right: -0.125rem;
+		transform: rotate(68deg);
+		color: #EDFF00;
+	}
+
+	.hidden {
+		display: none;
+	}
+
+	.countdown {
+		scale: 3;
+	    color: #c2c2c2;
+	}
 	
 </style>
 {{template "button-styles" .}}
@@ -215,7 +251,12 @@
 		{{ if eq .Exercise.MeasurementType 0 }}
 			<div class="reps-text">15 reps</div>
 		{{ else }}
-			<div class="gg-play-button-o"></div>
+		<div id="countdown" class="hidden countdown">0:00</div>
+		<div id="play" _="on click toggle .hidden on #countdown
+				on click toggle .hidden on #measurement
+				on click toggle .gg-play-button-o on me
+				on click toggle .gg-redo on me" class="gg-play-button-o">
+		</div>
 		{{ end }}
         <div class="button-spacer"></div>
     </div>
