--- a/templates/exercise-page.html
+++ b/templates/exercise-page.html
@@ -257,6 +257,10 @@
 				on click toggle .gg-play-button-o on me
 				on click toggle .gg-redo on me" class="gg-play-button-o">
 		</div>
+		<div _="repeat forever
+					wait 1s
+					increment :x then put into me
+				end"></div>
 		{{ end }}
         <div class="button-spacer"></div>
     </div>
