switch back to latest script because cache age correct

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
             integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" 
             crossorigin="anonymous">
     </script>
-    <script src="https://unpkg.com/hyperscript.org@0.9.5/dist/_hyperscript_w9y.min.js"
-            integrity="A2jw3A0kIuWUndGVR7XIZCKf8rHGOqHgs/fGK0RJx+ZNOiYxt7Mr3qD6Sr9s2fpQ" 
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"
+            integrity="sha384-+Uth1QzYJsTjnS5SXVN3fFO4I32Y571xIuv53WJ2SA7y5/36tKU1VCutONAmg5eH" 
             crossorigin="anonymous">
     </script>
     <script>
