adding description meta data tag

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title>Strength Gadget</title>
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="Strength Gadget is a free workout tool to make you stronger">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
     <script src="https://unpkg.com/htmx.org@2.0.0" 
             integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" 
